@@ -1,4 +1,5 @@
 2.5.3 -> 2.9
+	- preliminary macro invironment as side effect of rpmrc parse.
 	- macro handling in rpmlib -- rework include: tag with macro expansion.
 	- first attempt at librpmbuild API.
         - fixed lib/rpmrc.c to accept include: tags (AdV)
